--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,7 @@
 name = "caiross"
 version = "0.1.0"
 edition = "2021"
+
+[dependencies]
+cairo-rs = { version = "0.17.0", features = ["png"] }
+gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
